# samuel

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_indexes.py  003_add_repo_details.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  generation.py  repository.py  resume.py  user.py
backend/app/routers/: auth.py  generate.py  github.py  history.py  resume.py
backend/app/schemas/: __init__.py
backend/app/services/: auth.py  encryption.py  github_graphql.py  pdf_extractor.py
backend/app/skills/: ats_checker.md  ats_checker.py  jd_parser.md  jd_parser.py  orchestrator.py  project_matcher.md  project_matcher.py  resume_writer.md  resume_writer.py
backend/app/utils/: llm.py
backend/tests/: test_health.py
backend/tests/test_skills/: __init__.py
docs/: README.md
docs/api/: authentication.md  index.md
docs/api/endpoints/: auth.md  generate.md  github.md  history.md  resume.md
docs/exp/: pdf.md
docs/guides/: getting-started.md
docs/llm/: TASK.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/history/: page.tsx
frontend/src/lib/: api.ts  types.ts
(+1 files in other folders)
